# do not edit -- automatically generated by arch changelog
# arch-tag: automatic-ChangeLog--jdavid@itaapy.com--public/itools--main--0.11
#

2005-10-23 16:22:43 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-29

    Summary:
      web, add headers to the response (Date, Connection and Server)
    Revision:
      itools--main--0.11--patch-29


    modified files:
     Changelog web/response.py


2005-10-23 08:33:03 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-28

    Summary:
      web, fix PUT, LOCK and UNLOCK for Zope 2
    Revision:
      itools--main--0.11--patch-28


    modified files:
     Changelog web/request.py web/zope2.py


2005-10-20 09:17:05 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-27

    Summary:
      catalog, Keyword analyser deals with "frozenset" values too
    Revision:
      itools--main--0.11--patch-27


    modified files:
     Changelog catalog/Analysers.py


2005-10-19 19:15:21 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-26

    Summary:
      schemas, improve API
    Revision:
      itools--main--0.11--patch-26

    Now the public API is (itools.schemas.*):
    
     - Schema
     - register_schema
     - get_schema
     - get_schema_by_uri
     - get_datatype
     - get_datatype_by_uri

    modified files:
     Changelog schemas/__init__.py schemas/dublin_core.py
     schemas/registry.py web/request.py web/response.py
     web/zope2.py xhtml/XHTML.py xml/XML.py xml/namespaces.py
     xml/parser.py xml/stl.py


2005-10-18 17:20:15 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-25

    Summary:
      web, decode cookie values with the schema
    Revision:
      itools--main--0.11--patch-25


    modified files:
     Changelog web/zope2.py


2005-10-18 15:19:18 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-24

    Summary:
      web, fix "context.has_cookie"
    Revision:
      itools--main--0.11--patch-24


    modified files:
     Changelog web/context.py


2005-10-18 15:01:37 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-23
